api: getblock
