# internal/busi/api.go
@@ -34,6 +34,10 @@ func registerV1(r *gin.Engine) {
 		}
 
 		{
+			apiv1.GET("/block/:height", v1.GetBlock)
+		}
+
+		{
 			apiv1.POST("/contractverify/:address", v1.SubmitContractVerify) // submit contract verify
 			apiv1.GET("/contractverify/:id", v1.GetContractVerify)          // get contract verify
 			apiv1.GET("/complieversions", v1.ListCompileVersion)            // list contract compile cersion
